fix: It will fix overflowing tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ img {
 .tags {
     margin-top: 5px;
     font-size: 12px;
+    height: 20px;
 }
 
 .blue {
